# libopenTIDAL

./: .endpoints.md.swp  .gitignore  .html  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  endpoints.md  fav  feed  genHtmlMan.sh  home.c  install_manifest.txt  log.txt  playlist  siff  siff.c  statusCodes.md  stream  test.txt
Docs/: OTContentContainer.7  OTContentStreamContainer.7  OTDeallocContainer.3  OTHttpThreadHandleCleanup.3  OTHttpThreadHandleCreate.3  OTJsonArrayForEach.3  OTJsonContainer.7  OTJsonGetArrayItem.3  OTJsonGetArraySize.3  OTJsonGetNumberValue.3  OTJsonGetObjectItem.3  OTJsonGetObjectItemNumberValue.3  OTJsonGetObjectItemStringValue.3  OTJsonGetStringValue.3  OTJsonHasObjectItem.3  OTJsonIsArray.3  OTJsonIsBool.3  OTJsonIsFalse.3  OTJsonIsInvalid.3  OTJsonIsNull.3  OTJsonIsNumber.3  OTJsonIsObject.3  OTJsonIsRaw.3  OTJsonIsString.3  OTJsonIsTrue.3  OTPersistentCreate.3  OTQuality.7  OTServiceAddFavorite.3  OTServiceAddFavorites.3  OTServiceAddPlaylistItem.3  OTServiceAddPlaylistItems.3  OTServiceCreatePlaylist.3  OTServiceDeleteFavorite.3  OTServiceDeletePlaylistItem.3  OTServiceFeedActivitySeen.3  OTServiceGetBearerToken.3  OTServiceGetDeviceCode.3  OTServiceGetFavorites.3  OTServiceGetFeedActivities.3  OTServiceGetFeedActivityUnseenExists.3  (+19 more)
Python/: setup.py
Source/: OTAlloc.c  OTBase64.c  OTBase64.h  OTDealloc.c  OTHelper.h  OTHttp.c  OTHttp.h  OTHttpParse.c  OTJson.c  OTJson.h  OTPersistent.c  OTPersistent.h  OTSession.c  OTSessionRefresh.c  OTString.c  OTUrlEncode.c  openTIDAL.h
debug/: curl  curl.c  handle  (+4 more)
(+326 files in other folders)
